--- a/functions/phpWordSample/composer.json
+++ b/functions/phpWordSample/composer.json
@@ -67,7 +67,7 @@
     "require-dev": {
         "ext-zip": "*",
         "ext-gd": "*",
-        "phpunit/phpunit": "^4.8.36 || ^7.0",
+        "phpunit/phpunit": "^7",
         "squizlabs/php_codesniffer": "^2.9",
         "friendsofphp/php-cs-fixer": "^2.2",
         "phpmd/phpmd": "2.*",
@@ -85,6 +85,9 @@
         "dompdf/dompdf": "Allows writing PDF"
     },
     "autoload": {
+	    "classmap": [
+	            "src/"
+	        ]
         "psr-4": {
             "PhpOffice\\PhpWord\\": "src/PhpWord"
         }
