--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "require": {
         "phpoffice/phpword": "^0.16.0",
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^7.0",
+        "phpunit/dbunit": "^4.0",
         "zendframework/zend-stdlib": "^3.2",
-        "zendframework/zend-escaper": "^2.6"
+        "zendframework/zend-escaper": "^2.6",
+        "slim/pdo": "^1.10",
+        "fpdo/fluentpdo": "^2.1"
     }
 }
