--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "zendframework/zend-stdlib": "^3.2",
         "zendframework/zend-escaper": "^2.6",
         "slim/pdo": "^1.10",
-        "fpdo/fluentpdo": "^2.1"
+        "fpdo/fluentpdo": "^2.1",
+        "codeception/codeception": "^2.5"
     }
 }
