--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,5 +8,5 @@ actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: http://localhost/CurriculumChangeRequests
+            url: http://localhost/myapp
         - \Helper\Acceptance
